@@ -1,0 +1,34 @@
+.TH "PLANNER" "1" "April 15th 2005" "Martin-Eric Racine" "GNOME Office"
+.SH "NAME"
+planner \- Project Management application for GNOME
+.SH "SYNOPSIS"
+.B planner
+.RI [ options ] " files" ...
+.SH "DESCRIPTION"
+.B planner
+is a Project Management application that supports 
+Gantt charts, resource allocation and integration with 
+other GNOME applications.
+.SH "OPTIONS"
+.B planner
+follows the standard GNU command line syntax, 
+with long options starting with two dashes (`\-').
+.TP 
+.B \-?, \-\-help
+Show summary of options.
+.SH "SEE ALSO"
+.B planner
+offers a complete 
+.I User Guide
+via GNOME's Help Browser.
+.SH "AUTHOR"
+.B planner 
+was written by 
+Alvaro del Castillo <acs@barrapunto\.com>,
+Mikael Hallendal <micke@imendio\.com>,
+Richard Hult <rhult@imendio\.com> 
+&
+Kurt Maute <kurt@maute\.us>,
+along with several other contributors.
+.PP 
+This manual page was written by Martin\-Eric Racine <q\-funk@iki\.fi>.
