@@ -1,3 +1,10 @@
+2006-09-23 Kurt Maute <Kurt@Maute.us>
+	* data/planner.1:  man page contributed by Martin-Eric Racine
+	* data/Makefile.am:  for man page contributed by Martin-Eric Racine
+	* configure.in: fix for bug #353213 contrubuted by Dennis Lubert
+	* libplanner/mrp-sql.c: fix for bug #353213 contrubuted by Dennis Lubert
+	* src/planner-sql-plugin.c: fix for bug #353213 contrubuted by Dennis Lubert
+
 2006-09-13  Pema Geyleg  <pgeyleg@gmail.com>
 
 	* configure.in: Added dz in ALL_LINGUAS
